<resources>
    <string name="app_name">Dashboard Islami</string>
    <string name="welcome">Assalamualaikum, Fulan</string>
    <string name="doa">Doa</string>
    <string name="dzikir">Dzikir</string>
    <string name="zakat">Zakat</string>
    <string name="jadwal_shalat">Jadwal Shalat</string>
    <string name="kajian">Kajian</string>
    <string name="inpiration">Inpiration</string>
    <string name="pagi_dan_malam">Pagi dan Malam</string>
    <string name="rumah">Doa Rumah</string>
    <string name="makanan_dan_minuman"><![CDATA[Makanan & Minuman]]></string>
    <string name="perjalanan">Doa Perjalanan</string>
    <string name="shalat">Doa Shalat</string>
    <string name="etika_baik">Doa Etika Baik</string>
    <string name="doa_makanan_dan_minuman">Doa Makanan dan Minuman</string>
    <string name="doa_sebelum_makan">Doa Sebelum Makan</string>
    <string name="_1_gram">1 Gram</string>
    <string name="harga_emas_hari_ini_16_oct_2023">Harga Emas - 16 Oct 2023</string>
    <string name="rp_1_087_000">Rp. 1.087.000</string>
    <string name="_85_gram">85 Gram</string>
    <string name="rp_92_395_000">Rp. 92.395.000</string>
    <string name="total_harta_keseluruhan">Total Harta Keseluruhan</string>
    <string name="hitung_zakat">Hitung Zakat</string>
    <string name="status">Status</string>
    <string name="wajib">Wajib</string>
    <string name="zakat_yang_dikeluarkan">Zakat Yang Dikeluarkan</string>
    <string name="judul_zakat">Zakat</string>
    <string name="kajian_toolbar">Kajian</string>
    <string name="nama_penceramah">Nama Penceramah</string>
    <string name="nama_channel">Nama Channel</string>
    <string name="channel_youtube">Channel Youtube</string>
    <string name="judul_kajian">Judul Kajian</string>
    <string name="detail_kajian">Detail Kajian</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="subuh">Subuh</string>
    <string name="_04_00">04:00</string>
    <string name="ngargoyoso">Ngargoyoso</string>
    <string name="jadwal_sholat">Jadwal Sholat</string>
    <string name="selasa_10_januari">Selasa, 10 Januari</string>
    <string name="karanganyar">Karanganyar</string>
</resources>